--- a/.github/workflows/build_platformIO.yml
+++ b/.github/workflows/build_platformIO.yml
@@ -21,79 +21,22 @@ on:
 
 jobs:
   validate_lib_json:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: get latest release version number
-        id: latest_ver
-        run: echo "::set-output name=release::$(awk -F "=" '/version/ {print $2}' library.properties)"
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-
-      - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
-
-      - name: package lib
-        run: pio package pack -o PlatformIO-RF24Mesh-${{ steps.latest_ver.outputs.release }}.tar.gz
-
-      - name: Save artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: "PIO_pkg_RF24Mesh"
-          path: PlatformIO*.tar.gz
-
-      - name: Upload Release assets
-        if: github.event_name == 'release'
-        uses: csexton/release-asset-action@master
-        with:
-          pattern: "PlatformIO*.tar.gz"
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: upload package to PlatformIO Registry
-        if: github.event_name == 'release' && github.event_type != 'edited'
-        # PIO lib packages cannot be re-published under the same tag
-        env:
-          PLATFORMIO_AUTH_TOKEN: ${{ secrets.PLATFORMIO_AUTH_TOKEN }}
-        run: pio package publish --owner nrf24 --non-interactive
+    uses: nRF24/.github/.github/workflows/validate_deploy_platformio.yaml@main
+    secrets: inherit
 
   check_formatting:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      # Ubuntu 20.04.4 LTS reunners ship with clang-tools v12
-      # - name: Install clang-tools
-      #   uses: KyleMayes/install-llvm-action@v1
-      #   with:
-      #     version: 12
-      - name: Install linter python package
-        run: python3 -m pip install git+https://github.com/cpp-linter/cpp-linter-action@v1
-      - name: run linter as a python package
-        id: linter
-        run: |
-          cpp-linter \
-          --version=12 \
-          --style=file \
-          --tidy-checks='-*' \
-          --files-changed-only='False' \
-          --extensions=ino
-      - name: Linter checks failed?
-        if: steps.linter.outputs.checks-failed > 0
-        run: exit 1
+    uses: nRF24/.github/.github/workflows/cpp_lint.yaml@main
+    with:
+      extensions: ino
 
   build:
     needs: [check_formatting, validate_lib_json]
-    runs-on: ubuntu-latest
-
+    uses: nRF24/.github/.github/workflows/build_platformio.yaml@main
+    with:
+     example-path: ${{ matrix.example }}
+     board-id: ${{ matrix.board }}
     strategy:
       fail-fast: false
-
       matrix:
         example:
           - "examples/RF24Mesh_Example/RF24Mesh_Example.ino"
@@ -110,41 +53,3 @@ jobs:
           - "teensy40"
           - "teensy41"
           - "teensylc"
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Cache PlatformIO
-        uses: actions/cache@v2
-        with:
-          path: ~/.platformio
-          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-
-      - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
-
-      # "dependencies" field in JSON should automatically install RF24 & RF24Network.
-      # Because we run this CI test against the local repo, the JSON seems neglected
-      - name: Install library dependencies
-        run: |
-          pio lib -g install nrf24/RF24
-          pio lib -g install https://github.com/nrf24/RF24Network.git
-        # pio lib -g install nrf24/RF24Network
-
-      - name: Run PlatformIO
-        run: pio ci --lib="." --board=${{ matrix.board }}
-        env:
-          PLATFORMIO_CI_SRC: ${{ matrix.example }}
