apply template to RF24Mesh lib
in accordance with discussion at nRF24/RF24Network#204

uses type definition for RF24Mesh and renames class to ESB_Mesh for backwards compatibility.

updates CI to check RF24Network changes specifically for the template-attempt2 branch

--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -44,6 +44,7 @@ jobs:
     uses: nRF24/.github/.github/workflows/build_linux_cmake.yaml@main
     with:
       rf24mesh-ref: ${{ github.sha }}
+      rf24network-ref: 'template-attempt2' # remove me before merging
       compiler: ${{ matrix.toolchain.compiler }}
       usr-dir: ${{ matrix.toolchain.usr_dir }}
       examples-path: examples_RPi
