--- a/.github/workflows/build_platformIO.yml
+++ b/.github/workflows/build_platformIO.yml
@@ -35,8 +35,10 @@ jobs:
     needs: [check_formatting, validate_lib_json]
     uses: nRF24/.github/.github/workflows/build_platformio.yaml@main
     with:
-     example-path: ${{ matrix.example }}
-     board-id: ${{ matrix.board }}
+      example-path: ${{ matrix.example }}
+      board-id: ${{ matrix.board }}
+      rf24mesh-ref: ${{ github.sha }}
+      rf24network-ref: 'template-attempt2' # remove me before merging
     strategy:
       fail-fast: false
       matrix:
