--- a/.github/workflows/build_rp2xxx.yml
+++ b/.github/workflows/build_rp2xxx.yml
@@ -31,6 +31,7 @@ jobs:
     with:
       board-id: ${{ matrix.board }}
       rf24mesh-ref: ${{ github.sha }}
+      rf24network-ref: 'template-attempt2' # remove me before merging
     strategy:
       fail-fast: false
       matrix:
