Template layer for radio HW abstraction (#223)
* apply template to RF24Mesh lib

  in accordance with discussion at nRF24/RF24Network#204

  uses type definition for RF24Mesh and renames class to ESB_Mesh for backwards compatibility.
  updates CI to check RF24Network changes specifically for the template-attempt2 branch

* Update docs for v2.0

* bump major version

---------

Co-authored-by: TMRh20 <tmrh20@gmail.com>

--- a/.github/workflows/build_arduino.yml
+++ b/.github/workflows/build_arduino.yml
@@ -35,6 +35,7 @@ jobs:
         - source-url: https://github.com/nRF24/RF24.git
         - source-url: https://github.com/nRF24/RF24Network.git
         - source-path: ./
+        - name: nrf_to_nrf
       fqbn: ${{ matrix.fqbn }}
       enable-deltas-report: ${{ matrix.enable-deltas-report }}
       platforms: |
@@ -70,7 +71,7 @@ jobs:
           - "arduino:avr:chiwawa"
           - "arduino:avr:one"
           - "arduino:avr:unowifi"
-          # - "arduino:mbed:nano33ble" # pending nRF5x integration
+          - "arduino:mbed:nano33ble"
           - "arduino:samd:mkr1000"
           - "arduino:samd:mkrwifi1010"
           - "arduino:samd:nano_33_iot"
