limit PIO CI to use v1.x branch of RF24Network

--- a/.github/workflows/build_platformIO.yml
+++ b/.github/workflows/build_platformIO.yml
@@ -37,6 +37,7 @@ jobs:
     with:
      example-path: ${{ matrix.example }}
      board-id: ${{ matrix.board }}
+     rf24network-ref: v1.x
     strategy:
       fail-fast: false
       matrix:
