limit Mesh v1.x to Network v1.x tags
limit CI to use v1.x branch of RF24Network

--- a/.github/workflows/build_arduino.yml
+++ b/.github/workflows/build_arduino.yml
@@ -34,6 +34,7 @@ jobs:
       libraries: |
         - source-url: https://github.com/nRF24/RF24.git
         - source-url: https://github.com/nRF24/RF24Network.git
+          version: v1.x
         - source-path: ./
       fqbn: ${{ matrix.fqbn }}
       enable-deltas-report: ${{ matrix.enable-deltas-report }}
