--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -43,7 +43,7 @@ jobs:
     needs: check_formatting
     uses: nRF24/.github/.github/workflows/build_linux_cmake.yaml@main
     with:
-      rf24mesh-ref: ${{ github.sha }}
+      rf24network-ref: v1.x
       compiler: ${{ matrix.toolchain.compiler }}
       usr-dir: ${{ matrix.toolchain.usr_dir }}
       examples-path: examples_RPi
