--- a/.github/workflows/build_platformIO.yml
+++ b/.github/workflows/build_platformIO.yml
@@ -2,8 +2,7 @@ name: PlatformIO build
 
 on:
   pull_request:
-    branches: [master, 1.x]
-    types: [opened, reopened]
+    branches: [master, v1.x]
     paths:
       - ".github/workflows/build_platformIO.yml"
       - "library.json"
@@ -11,7 +10,7 @@ on:
       - "!examples/old_backups/**"
       - "!examples/rf24_ATTiny/**"
   push:
-    branches: [master, 1.x]
+    branches: [master, v1.x]
     paths:
       - ".github/workflows/build_platformIO.yml"
       - "library.json"
@@ -28,13 +27,8 @@ jobs:
     with:
       deploy-release: ${{ github.event_name == 'release' }}
 
-  check_formatting:
-    uses: nRF24/.github/.github/workflows/cpp_lint.yaml@main
-    with:
-      extensions: ino
-
   build:
-    needs: [check_formatting, validate_lib_json]
+    needs: [validate_lib_json]
     uses: nRF24/.github/.github/workflows/build_platformio.yaml@main
     with:
       example-path: ${{ matrix.example }}
