satisfy nRF24/.github#9

--- a/.github/workflows/build_arduino.yml
+++ b/.github/workflows/build_arduino.yml
@@ -2,12 +2,14 @@ name: Arduino CLI build
 
 on:
   pull_request:
+    branches: [master, 1.x]
     types: [opened, reopened]
     paths:
       - ".github/workflows/build_arduino.yml"
       - "examples/**"
 
   push:
+    branches: [master, 1.x]
     paths:
       - ".github/workflows/build_arduino.yml"
       - "examples/**"
