--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -2,6 +2,7 @@ name: Linux build
 
 on:
   pull_request:
+    branches: [master, 1.x]
     types: [opened, reopened]
     paths:
       - "*.h"
@@ -15,6 +16,7 @@ on:
       - "pyRF24Mesh/*"
       - ".github/workflows/build_linux.yml"
   push:
+    branches: [master, 1.x]
     paths:
       - "*.h"
       - "*.cpp"
