--- a/.github/workflows/build_arduino.yml
+++ b/.github/workflows/build_arduino.yml
@@ -2,25 +2,20 @@ name: Arduino CLI build
 
 on:
   pull_request:
-    types: [opened, reopened]
+    branches: [master, v1.x]
     paths:
       - ".github/workflows/build_arduino.yml"
       - "examples/**"
 
   push:
+    branches: [master, v1.x]
     paths:
       - ".github/workflows/build_arduino.yml"
       - "examples/**"
 
 jobs:
-  check_formatting:
-    uses: nRF24/.github/.github/workflows/cpp_lint.yaml@main
-    with:
-      ignore: '!examples|'
-      extensions: ino
 
   build:
-    needs: check_formatting
     uses: nRF24/.github/.github/workflows/build_arduino.yaml@main
     with:
       sketch-paths: |
