--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=RF24Mesh
 version=2.0.0
 author=TMRh20
 maintainer=TMRh20,Avamander
-sentence=OSI Layer 7, Automated 'mesh' style networking for nrf24L01(+) radios.
+sentence=OSI Layer 7, Automated 'mesh' style networking for nrf24L01(+) & nrf52x radios.
 paragraph=Attempting to provide fully automated, wireless, mesh networking for sensor networks/IoT devices. Automated addressing, discovery and operation built on the RF24 communication stack.
 category=Communication
 url=https://nRF24.github.io/RF24Mesh/
