trigger compile size reports for PRs
Specifically for PRs that only change the lib src code and not examples.

--- a/.github/workflows/build_arduino.yml
+++ b/.github/workflows/build_arduino.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - ".github/workflows/build_arduino.yml"
       - "examples/**"
+      - "RF24Mesh.*"
+      - "RF24Mesh_config.h"
 
   push:
     branches: [master, v1.x]
